Fix Links for GitHub pages

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <title>Homepage - TailwindCSS Ecommerce Template</title>
 
-    <link rel="stylesheet" href="/dist/main.css">
+    <link rel="stylesheet" href="dist/main.css">
     <link href='https://unpkg.com/css.gg/icons/all.css' rel='stylesheet'>
     <script src="//unpkg.com/alpinejs" defer></script>
-    <script src="/main.js" defer></script>
+    <script src="main.js" defer></script>
 </head>
 
 <body>
@@ -46,11 +46,11 @@
                 </div>
                 <nav :class="isOpen ? '' : 'hidden'" class="sm:flex sm:justify-center sm:items-center mt-4">
                     <div class="flex flex-col sm:flex-row">
-                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="/">Home</a>
-                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="/category.html">Category</a>
-                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="/product.html">Product</a>
-                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="/cart.html">Cart</a>
-                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="/contact.html">Contact</a>
+                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="index.html">Home</a>
+                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="category.html">Category</a>
+                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="product.html">Product</a>
+                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="cart.html">Cart</a>
+                        <a class="mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0" href="contact.html">Contact</a>
                     </div>
                 </nav>
                 <div class="relative mt-6 max-w-lg mx-auto">
@@ -79,7 +79,7 @@
             <hr class="my-3">
             <div class="flex justify-between mt-6">
                 <div class="flex">
-                    <img class="h-20 w-20 object-cover" src="/images/tshirt-front-white-small.png" alt="">
+                    <img class="h-20 w-20 object-cover" src="images/tshirt-front-white-small.png" alt="">
                     <div class="mx-3">
                         <h3 class="text-sm text-gray-600">T-Shirt</h3>
                         <div class="flex items-center mt-2">
@@ -214,7 +214,7 @@
                        Trending Products
                       </h2>
                     </div>
-                    <a href="/category.html" class="group flex items-center text-xl transition-colors sm:pt-0 text-blue-500 hover:text-blue-900">
+                    <a href="category.html" class="group flex items-center text-xl transition-colors sm:pt-0 text-blue-500 hover:text-blue-900">
                       Show more
                       <i class="px-2 gg-arrow-right"></i>
                     </a>
@@ -223,7 +223,7 @@
                     <div class="grid gap-6 grid-cols-2 lg:grid-cols-4 mt-6">
                         <div class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
                             <div class="flex items-end justify-end h-64 w-full bg-cover bg-center"
-                                style="background-image: url('/images/Beanie-grey-medium.png')">
+                                style="background-image: url('images/Beanie-grey-medium.png')">
                             </div>
                             <div class="px-5 py-3 bg-white">
                                 <h3 class="text-gray-700 uppercase">Beanie</h3>
@@ -232,7 +232,7 @@
                         </div>
                         <div class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
                             <div class="flex items-end justify-end h-64 w-full bg-cover bg-center"
-                                style="background-image: url('/images/jersey-front-black-medium.png')">
+                                style="background-image: url('images/jersey-front-black-medium.png')">
                             </div>
                             <div class="px-5 py-3 bg-white">
                                 <h3 class="text-gray-700 uppercase">Jersey</h3>
@@ -241,7 +241,7 @@
                         </div>
                         <div class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
                             <div class="flex items-end justify-end h-64 w-full bg-cover bg-center"
-                                style="background-image: url('/images/tshirt-front-blue-medium.png')">
+                                style="background-image: url('images/tshirt-front-blue-medium.png')">
                             </div>
                             <div class="px-5 py-3 bg-white">
                                 <h3 class="text-gray-700 uppercase">T-Shirt</h3>
@@ -250,7 +250,7 @@
                         </div>
                         <div class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
                             <div class="flex items-end justify-end h-64 w-full bg-cover bg-center"
-                                style="background-image: url('/images/buckethat-white-medium.png')">
+                                style="background-image: url('images/buckethat-white-medium.png')">
                             </div>
                             <div class="px-5 py-3 bg-white">
                                 <h3 class="text-gray-700 uppercase">Bucket Hat</h3>
@@ -282,7 +282,7 @@
                             </ul>
                         </div>
                         <div class="py-16 text-center lg:py-0 w-full">
-                            <a href="/" class="font-mono text-4xl uppercase tracking-widest">Acme</a>
+                            <a href="index.html" class="font-mono text-4xl uppercase tracking-widest">Acme</a>
                             <div class="flex items-center justify-center pt-5">
                                 <a href="#">
                                     <div
@@ -314,14 +314,14 @@
                             <h4 class="pb-8 text-xl font-bold">Links</h4>
                             <ul>
                                 <li class="block pb-2">
-                                    <a href="/" class="text-base transition-colors hover:text-primary">Home</a>
+                                    <a href="index.html" class="text-base transition-colors hover:text-primary">Home</a>
                                 </li>
                                 <li class="block pb-2">
-                                    <a href="/category.html"
+                                    <a href="category.html"
                                         class="text-base transition-colors hover:text-primary">Category</a>
                                 </li>
                                 <li class="block pb-2">
-                                    <a href="/product.html"
+                                    <a href="product.html"
                                         class="text-base transition-colors hover:text-primary">Product</a>
                                 </li>
                             </ul>
