--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="{{ $page->language ?? 'en' }}">
+<html lang="en">
 
 <head>
+    <title>Homepage - TailwindCSS Ecommerce Template</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="referrer" content="always">
-
     <meta name="description" content="TailwindCSS Ecommerce Template">
-
-    <title>Homepage - TailwindCSS Ecommerce Template</title>
-
     <link rel="stylesheet" href="dist/main.css">
     <link href='https://unpkg.com/css.gg/icons/all.css' rel='stylesheet'>
     <script src="//unpkg.com/alpinejs" defer></script>
@@ -210,18 +207,20 @@
                 </div>
                 <div class="mt-12 mb-3 flex flex-col items-center justify-between sm:mb-10 sm:flex-row sm:pb-4 lg:pb-0">
                     <div class="text-center sm:text-left">
-                      <h2 class="text-3xl md:text-4xl">
-                       Trending Products
-                      </h2>
+                        <h2 class="text-3xl md:text-4xl">
+                            Trending Products
+                        </h2>
                     </div>
-                    <a href="category.html" class="group flex items-center text-xl transition-colors sm:pt-0 text-blue-500 hover:text-blue-900">
-                      Show more
-                      <i class="px-2 gg-arrow-right"></i>
+                    <a href="category.html"
+                        class="group flex items-center text-xl transition-colors sm:pt-0 text-blue-500 hover:text-blue-900">
+                        Show more
+                        <i class="px-2 gg-arrow-right"></i>
                     </a>
-                  </div>
+                </div>
                 <div class="mt-8">
                     <div class="grid gap-6 grid-cols-2 lg:grid-cols-4 mt-6">
-                        <div class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
+                        <div
+                            class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
                             <div class="flex items-end justify-end h-64 w-full bg-cover bg-center"
                                 style="background-image: url('images/Beanie-grey-medium.png')">
                             </div>
@@ -230,7 +229,8 @@
                                 <span class="text-gray-500 mt-2">$9.99</span>
                             </div>
                         </div>
-                        <div class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
+                        <div
+                            class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
                             <div class="flex items-end justify-end h-64 w-full bg-cover bg-center"
                                 style="background-image: url('images/jersey-front-black-medium.png')">
                             </div>
@@ -239,7 +239,8 @@
                                 <span class="text-gray-500 mt-2">$49.99</span>
                             </div>
                         </div>
-                        <div class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
+                        <div
+                            class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
                             <div class="flex items-end justify-end h-64 w-full bg-cover bg-center"
                                 style="background-image: url('images/tshirt-front-blue-medium.png')">
                             </div>
@@ -248,7 +249,8 @@
                                 <span class="text-gray-500 mt-2">$24.99</span>
                             </div>
                         </div>
-                        <div class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
+                        <div
+                            class="w-full max-w-sm mx-auto shadow-md overflow-hidden bg-gradient-to-b from-neutral-500 to-neutral-900 hover:from-neutral-600 hover:to-neutral-900">
                             <div class="flex items-end justify-end h-64 w-full bg-cover bg-center"
                                 style="background-image: url('images/buckethat-white-medium.png')">
                             </div>
